Fixing detail Pane for overlappings

--- a/public/style.css
+++ b/public/style.css
@@ -171,13 +171,13 @@ body {
 
 /* ---------------------------------DETAIL-PANE------------------------------ */
 .detail-pane {
-  border: 1px solid #ccc;
+  /* border: 1px solid #ccc; */
   width: 100%;
   margin-top: 2%;
 }
 
 .detail-container {
-  margin-left: 5%;
+  /* margin-left: 5%; */
 }
 
 /* #detailPane {
@@ -257,6 +257,12 @@ body {
 }
 
 /* ---------------------------------Content-Cards------------------------------ */
+
+.card {
+  float: left;
+  margin-right: 10px;
+  margin-bottom: 10px;
+}
 
 .card-deck {
   width: 100%;
